# Intelligent-Systems-Project

./: README.md
race/devel/: .catkin  .rosinstall  setup.sh
racecar_control/config/: racecar_control.yaml
racecar_control/launch/: racecar_control.launch
racecar_control/scripts/: servo_commands.py
racecar_description/meshes/: chassis.STL
racecar_description/urdf/: macros.xacro  (+2 more)
sim2real/: CMakeLists.txt  package.xml
sim2real/config/: eval.yaml  racecar.yaml
sim2real/launch/: base.launch  car.launch  localization.launch  mapping.launch  mapping_default.launch  sim2real.launch
sim2real/msg/: Query.msg  Result.msg
sim2real/project/IS_RLLAB/project/: RLLAB_project1.py  RLLAB_project2.py  RLLAB_project3.py
sim2real/scripts/: eval_agent.py  racecar_simul_dynamics.py
sim2real/scripts/env/: __init__.py  rccar_env.py  real_env.py
sim2real/scripts/map_generation/: README.md  get_points.py  map_generator.py  requirements.txt  waypoint_augmentation.py  waypoints_visualized_map.py
sim2real/urdf/: macros.xacro  materials.xacro  racecar.xacro
sim2real/worlds/: eval.json  eval.world
sim2real/worlds/waypoints/: project1_1_waypoints.txt  project1_2_waypoints.txt
sim2real/worlds/waypoints_augemented/: project1_1_aug_waypoints.txt  project1_2_aug_waypoints.txt
sim2real/worlds/world_map/: project1_1.txt  project1_2.txt
sim2real/worlds/world_map_scaled/: project1_1_scaled.txt  project1_2_scaled.txt
sim2real/worlds/world_with_waypoints/: project1_1_waypoints.world  project1_2_waypoints.world
sim2real/worlds/worlds/: project1_1.world  project1_2.world
(+12 files in other folders)
